[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/ui/cg_gallery.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/backgrounds/bg_title.png" id="2"]

[node name="CGGallery" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 5

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.02, 0.02, 0.06, 0.85)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 60.0
offset_top = 40.0
offset_right = 500.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 42
text = "GALLERY"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.05
anchor_top = 0.2
anchor_right = 0.95
anchor_bottom = 0.9
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 30
columns = 3

[node name="EmptyLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -20.0
offset_right = 200.0
offset_bottom = 20.0
theme_override_font_sizes/font_size = 24
text = "まだCGが解放されていません"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
offset_left = 1080.0
offset_top = 40.0
offset_right = 1220.0
offset_bottom = 90.0
text = "戻る"

[node name="FullscreenRect" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
z_index = 100
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
expand_mode = 1
stretch_mode = 6

[node name="CloseFullscreenButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
z_index = 101
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
